#########
# Setup #
#########
[metadata]
name = template_package
version = 0.0.1-dev
description = This package has utilities for iterating over files.
long_description = file: README.md
long_description_content_type = text/markdown

[options]
# Where is my code
packages = find:
package_dir =
    = src

[options.packages.find]
where = src