#########
# Setup #
#########
[metadata]
name = template_package
version = 0.0.1-dev
description = This package has utilities for iterating over files.
long_description = file: README.md
long_description_content_type = text/markdown

# author info
author = Lisanna Paladin
author_email = lisanna.paladin@gmail.com
maintainer = Lisanna Paladin
maintainer_email = lisanna.paladin@gmail.com

# project info
url = https://github.com/Lisanna/test-reproducibility
download url = https://github.com/Lisanna/test-reproducibility/releases
project_urls =
    Bug Tracker = https://github.com/Lisanna/test-reproducibility/issues
    Source Code = https://github.com/Lisanna/test-reproducibility

# search tags
# pypi.org/classifiers
classifiers =
    Development Status :: 1 - Planning
    Environment :: Console
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
keywords =
    template
    python
    package
    file utils
    iteration

# License
# spdx.org/license
license = MIT
license_file = LICENSE




[options]
# Where is my code
packages = find:
package_dir =
    = src

[options.packages.find]
where = src